testdata/bad/02-badcall.gol
fn(x : int) { x + 1 } (true)
